# Mapping

./: README.md
Qt2/graficar/: a.out  test.cpp  voronoi.h
build-ADA-1-Desktop_Qt_5_12_3_GCC_64bit-Debug/: Makefile  moc_circulo.cpp  moc_grafoaqt.cpp  qmake_qmake_immediate.qrc  qrc_qml.cpp
common_res/ADA-1/: main.cpp  main.qml  misListas.qml
convex_hull/: a.out  jarvis.cpp
convex_hull/docs/csv/: tiempo.csv
convex_hull/src/: CMakeLists.txt  Chan.h  Point.h  a.out  auxFunctions.h  convexHullTimer.h  giftWrapping.h  graham.h  grahamScan.h  jarvis.csv  jarvis.h  main.cpp  parallelGraham.h  randomPointsGenerator.h  simulation.h  tst.cpp
qt/: .qmake_qmake_immediate.qrc.swp  ADA-1.pro  ADA-1.pro.user.d5a2f74.21  ADA-1.pro.user.fd73b07.4.9-pre1  Makefile  a.out  graph.h  main.cpp  maingraph.cpp  moc_circulo.cpp  moc_grafoaqt.cpp  myThread.h  qmake_qmake_immediate.qrc  qrc_qml.cpp  read.h  voronoi.h
voronoi_diagram/: boronoi.h  readme.md  voronoi.h
